# home-ledger

./: .gitignore  HISTORY.md  README.md  RELEASE.md
.codex/: config.toml
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  main.py  schemas.py
backend/app/auth/: deps.py  oauth.py  routes.py
backend/app/db/: audit.py  backup.py  crud.py  models.py  seed.py  session.py
backend/app/db/migrations/: README.md
backend/app/routes/: admin.py  categories.py  payment_methods.py  transactions.py
backend/app/utils/: security.py
backend/tests/: conftest.py  test_admin.py  test_auth_me.py  test_backup.py  test_health.py  test_settings.py  test_transactions.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.test.tsx  App.tsx  index.css
frontend/src/api/: client.test.ts  client.ts  types.ts
frontend/src/auth/: AuthContext.tsx  context.ts  useMe.ts
frontend/src/components/: Icon.tsx  Layout.tsx
frontend/src/pages/: AdminPage.tsx  DashboardPage.tsx  NotAuthorizedPage.tsx  SettingsPage.tsx  TransactionsPage.tsx
scripts/: build.ps1  build.sh  dev.ps1  dev.sh  seed.ps1  seed.sh  server.ps1  server.sh  smoke.ps1  start.ps1  start.sh
